--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script defer src="/slide.js"></script>
+    <script defer src="slide.js"></script>
   </head>
   <body>
     <!-- HEADER -->
