--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Detail-Page</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/main.css" />
@@ -18,161 +18,53 @@
       </div>
     </header>
 
-    <!-- Slide visual -->
-    <main>
-      <div class="top-text">Top 20 Rated Movie</div>
-      <div class="button-list">
-        <button class="button-left">Left</button>
-        <button class="button-right">Rit</button>
+    <!-- movie Detail -->
+    <div class="movie-title">Movie Name</div>
+    <div class="movie-detail">
+      <div class="movie-poster">
+        <img src="/NBCAMP_JsWeek3/src/29N43AR8SP_1.jpg" alt="포스터" />
       </div>
-      <div id="slider">
-        <div class="slide-inner">
-          <!-- clss slide 가 하나의 조입니다. -->
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
+      <div class="movie-info">
+        <div class="popular">
+          <p class="category">Popularity</p>
+          <p class="value">00000</p>
+        </div>
+        <div class="release">
+          <p class="category">Release</p>
+          <p class="value">2023-05-24</p>
+        </div>
+        <div class="production">
+          <p class="category">Production</p>
+          <p class="value">walt disney</p>
+        </div>
+        <div class="overview">
+          The youngest of King Triton’s daughters, and the most defiant, Ariel
+          longs to find out more about the world beyond the sea, and while
+          visiting the surface, falls for the dashing Prince Eric. With mermaids
+          forbidden to interact with humans, Ariel makes a deal with the evil
+          sea witch, Ursula, which gives her a chance to experience life on
+          land, but ultimately places her life – and her father’s crown – in
+          jeopardy.
+        </div>
+        <div class="genre">
+          <div>family</div>
         </div>
       </div>
-    </main>
+    </div>
 
-    <section class="inner">
-      <div class="filter-form">
-        <div class="filter">
-          <div class="filter-name">Discover Movies</div>
-          <div class="filter-select">
-            <div class="popularity">Popularity</div>
-            <div class="vote">Vote</div>
-            <div class="comment">Comment</div>
-          </div>
-        </div>
-        <div class="search-box">
-          <input type="text" class="search-input" placeholder="Search movies" />
-          <button class="search-btn">Search</button>
-        </div>
+    <!-- movie detail tag-line -->
+    <section class="tag-line">
+      <div
+        class="tag-line-text"
+        style="background-image: url(/NBCAMP_JsWeek3/src/29N43AR8SP_1.jpg)"
+      >
+        Watch and you'll see, some day I'll be, part of your world!
       </div>
+    </section>
 
-      <div class="card-container">
-        <!-- 클래스 movie-card가 하나의 조 입니다. -->
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-      </div>
+    <!-- movie detail production and box office success -->
+    <section class="money-info">
+      <div class="title">production and box office success</div>
     </section>
   </body>
 </html>
