--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script defer src="slide.js"></script>
+    
+    <script type="module" src="./main-print.js"></script>
+    <!-- <script defer src="slide.js"></script> -->
   </head>
   <body>
     <!-- HEADER -->
@@ -27,49 +29,7 @@
       </div>
       <div id="slider">
         <div class="slide-inner">
-          <!-- clss slide 가 하나의 조입니다. -->
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide-num">
-              <div class="slide-img">
-                <img
-                  src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-                  alt="name poster"
-                />
-              </div>
-              <div class="slide-info">
-                <div class="title">The Littel mermaid</div>
-                <div class="rating">Rating</div>
-              </div>
-            </div>
-          </div>
+          <!-- clss slide 가 하나의 조입니다.-->
         </div>
       </div>
     </main>
@@ -92,86 +52,6 @@
 
       <div class="card-container">
         <!-- 클래스 movie-card가 하나의 조 입니다. -->
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
-        <div class="movie-card">
-          <div class="card-poster">
-            <img
-              src="https://image.tmdb.org/t/p/w500/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg"
-              alt="name poster"
-            />
-          </div>
-          <div class="card-title">The Littel mermaid</div>
-          <div class="card-rating">Rating</div>
-        </div>
       </div>
     </section>
   </body>
