--- a/detail.html
+++ b/detail.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/detail.css" />
-    <script defer src="./detail_fetch.js"></script>
+
+    <script defer src="./js/detail_fetch.js"></script>
   </head>
   <body>
     <!-- HEADER -->
