--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
-  <script type="module" src="./main-print.js"></script>
-  <script defer src="detail_fetch.js"></script>
+  <script type="module" src="./js/main-print.js"></script>
+  <script defer src="./js/detail_fetch.js"></script>
 
 </head>
 
