--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/detail.css" />
 
-    <script defer src="./js/detail_fetch.js"></script>
+    <script defer src="./js/detail.js"></script>
   </head>
   <body>
     <!-- HEADER -->
@@ -24,7 +24,7 @@
       <div class="movie-title">Movie Name</div>
       <div class="movie-detail">
         <div class="movie-poster">
-          <img src="/NBCAMP_JsWeek3/src/29N43AR8SP_1.jpg" alt="포스터" />
+          <img src="./imgs/29N43AR8SP_1.jpg" alt="포스터" />
         </div>
         <div class="movie-info">
           <div class="popular">
