--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
-  <script type="module" src="./js/main-print.js"></script>
-  <script defer src="./js/detail_fetch.js"></script>
-
+  <script defer type="module" src="./js/main-print.js"></script>
+  <script defer src="./js/detail.js"></script>
 </head>
 
 <body>
@@ -28,7 +27,7 @@
     <div class="top-text">Top 20 Rated Movie</div>
     <div class="button-list">
       <button class="button-left">Left</button>
-      <button class="button-right">Rit</button>
+      <button class="button-right">Right</button>
     </div>
     <div id="slider">
       <div class="slide-inner">
