--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title></title>
   <link rel="stylesheet" href="./reset.css" />
   <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/index.css" />
 
-  <script defer type="module" src="./js/main-print.js"></script>
+  <script defer type="module" src="./js/main.js"></script>
   <script defer src="./js/detail.js"></script>
 </head>
 
