Parsed query params to get movie id

--- a/detail.html
+++ b/detail.html
@@ -2,8 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>Detail-Page</title>
-    <link rel="stylesheet" href="./reset.css" />
+    <title></title>
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
     <link rel="stylesheet" href="./css/detail.css" />
 
@@ -21,33 +21,25 @@
 
     <!-- movie Detail -->
     <section id="detail-area" class="detail-area">
-      <div class="movie-title">Movie Name</div>
+      <div class="movie-title"></div>
       <div class="movie-detail">
         <div class="movie-poster">
-          <img src="./imgs/29N43AR8SP_1.jpg" alt="포스터" />
+          <img src="" alt="포스터" />
         </div>
         <div class="movie-info">
           <div class="popular">
-            <p class="category">Popularity</p>
-            <p class="value">00000</p>
+            <p class="category"></p>
+            <p class="value"></p>
           </div>
           <div class="release">
             <p class="category">Release</p>
-            <p class="value">2023-05-24</p>
+            <p class="value"></p>
           </div>
           <div class="production">
             <p class="category">Production</p>
-            <p class="value">walt disney</p>
+            <p class="value"></p>
           </div>
-          <div class="overview">
-            The youngest of King Triton’s daughters, and the most defiant, Ariel
-            longs to find out more about the world beyond the sea, and while
-            visiting the surface, falls for the dashing Prince Eric. With
-            mermaids forbidden to interact with humans, Ariel makes a deal with
-            the evil sea witch, Ursula, which gives her a chance to experience
-            life on land, but ultimately places her life – and her father’s
-            crown – in jeopardy.
-          </div>
+          <div class="overview"> </div>
           <div id="detail-genre" class="genre">
             <!-- <div>family</div>
             <div>family</div>
@@ -73,9 +65,9 @@
         <tr>
           <!-- 첫번째 줄 시작 -->
           <td class="category">Budget</td>
-          <td class="info">250000000</td>
+          <td class="info"></td>
           <td class="category">Revenue</td>
-          <td class="info">325800000</td>
+          <td class="info"></td>
         </tr>
         <!-- 첫번째 줄 끝 -->
         <tr>
