--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <title></title>
-  <link rel="stylesheet" href="./reset.css" />
+  <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
   <link rel="stylesheet" href="./css/index.css" />
 
   <script defer type="module" src="./js/main.js"></script>
-  <script defer src="./js/detail.js"></script>
+  <!-- <script defer src="./js/detail.js"></script> -->
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <header>
     <div class="header">
       <div class="logo-box">
-        <img src="javascript:void(0)" alt="로고 이미지" />
+        <img src="" alt="로고 이미지" />
       </div>
     </div>
   </header>
