Added omitted tag - Popularity

--- a/detail.html
+++ b/detail.html
@@ -28,7 +28,7 @@
         </div>
         <div class="movie-info">
           <div class="popular">
-            <p class="category"></p>
+            <p class="category">Popularity</p>
             <p class="value"></p>
           </div>
           <div class="release">
