Render reviews after submitting form

--- a/detail.html
+++ b/detail.html
@@ -111,44 +111,7 @@
       </form>
 
       <!-- comment print -->
-      <div class="comment-print">
-        <div class="comment-card">
-          <div class="info">
-            <div class="name">Yoonsu</div>
-            <div class="gender">Male</div>
-          </div>
-          <div class="print">
-            넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요
-            ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ
-          </div>
-        </div>
-        <div class="comment-card">
-          <div class="info">
-            <div class="name">Yoonsu</div>
-            <div class="gender">Male</div>
-          </div>
-          <div class="print">
-            넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요
-            ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ
-          </div>
-        </div>
-        <div class="comment-card">
-          <div class="info">
-            <div class="name">Yoonsu</div>
-            <div class="gender">Male</div>
-          </div>
-          <div class="print">
-            넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요
-            ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ 오백번 보고싶어요 ㅠㅠ넘넘 재밋어용 ㅠㅠㅠ
-            오백번 보고싶어요 ㅠㅠ
-          </div>
-        </div>
-      </div>
+      <div class="comment-print"></div>
     </section>
   </body>
 </html>
