Implement gender radio button

--- a/detail.html
+++ b/detail.html
@@ -96,8 +96,10 @@
         <div class="select">
           <input id="review-writer" type="text" placeholder="Your name" />
           <input id="review-password" type="password" placeholder="Password" />
-          <button class="gender">Male</button>
-          <button class="gender">Female</button>
+					<input type="radio" id="Choice1" name="gender" value="male">
+					<label for="Choice1">Male</label>
+					<input type="radio" id="Choice2" name="gender" value="female">
+					<label for="Choice2">Female</label>
         </div>
         <div class="comment-submit">
           <input
