Update detail.html / radio Default
댓글 성별 선택 male 을 기본값으로 설정

--- a/detail.html
+++ b/detail.html
@@ -96,7 +96,7 @@
         <div class="select">
           <input id="review-writer" type="text" placeholder="Your name" />
           <input id="review-password" type="password" placeholder="Password" />
-					<input type="radio" id="Choice1" name="gender" value="male">
+					<input type="radio" id="Choice1" name="gender" value="male" checked="checked">
 					<label for="Choice1">Male</label>
 					<input type="radio" id="Choice2" name="gender" value="female">
 					<label for="Choice2">Female</label>
