Implement filtering by gender

--- a/detail.html
+++ b/detail.html
@@ -86,9 +86,9 @@
       <div class="title-area">
         <div class="title">Comment</div>
         <div class="filters">
-          <p>All</p>
-          <p>Male</p>
-          <p>Female</p>
+          <p data-gender="all">All</p>
+          <p data-gender="male">Male</p>
+          <p data-gender="female">Female</p>
         </div>
       </div>
       <!-- form -->
