comment button fix...
댓글 버튼 기능 수정...휴...

--- a/detail.html
+++ b/detail.html
@@ -113,17 +113,7 @@
       </form>
 
       <!-- comment print -->
-      <div class="comment-print">
-        <div class="comment-card">
-          <div class="info">
-            <div class="name">${writer}</div>
-            <div class="gender">${gender}</div>
-          </div>
-          <div class="print">${comment}</div>
-          <div class="delete-btn">D</div>
-          <div class="modify-btn">M</div>
-        </div>
-      </div>
+      <div class="comment-print"></div>
     </section>
   </body>
 </html>
