--- a/detail.html
+++ b/detail.html
@@ -86,9 +86,9 @@
       <div class="title-area">
         <div class="title">Comment</div>
         <div class="filters">
-          <p>All</p>
-          <p>Male</p>
-          <p>Female</p>
+          <p data-gender="all">All</p>
+          <p data-gender="male">Male</p>
+          <p data-gender="female">Female</p>
         </div>
       </div>
       <!-- form -->
@@ -96,7 +96,7 @@
         <div class="select">
           <input id="review-writer" type="text" placeholder="Your name" />
           <input id="review-password" type="password" placeholder="Password" />
-          <input type="radio" id="Choice1" name="gender" value="male" />
+          <input type="radio" id="Choice1" name="gender" value="male" checked="checked" />
           <label for="Choice1">Male</label>
           <input type="radio" id="Choice2" name="gender" value="female" />
           <label for="Choice2">Female</label>
