--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Slide visual -->
     <main>
-      <div class="top-text">Top 20 Rated Movie</div>
+      <div class="top-text">Top3 영화를 만나보세요.</div>
       <div class="button-list">
         <button class="button-left">Left</button>
         <button class="button-right">Right</button>
@@ -38,16 +38,19 @@
     <section class="inner">
       <div class="filter-form">
         <div class="filter">
-          <div class="filter-name">Discover Movies</div>
+          <div class="filter-name">흥행영화 전체보기</div>
           <div class="filter-select">
-            <div class="popularity">Popularity</div>
-            <div class="vote">Vote</div>
-            <div class="comment">Comment</div>
+            <div class="popularity">인기도 순</div>
+            <div class="vote">투표수 순</div>
           </div>
         </div>
         <div class="search-box">
-          <input type="text" class="search-input" placeholder="Search movies" />
-          <button class="search-btn">Search</button>
+          <input
+            type="text"
+            class="search-input"
+            placeholder="검색어를 입력해주세요."
+          />
+          <button class="search-btn">검색</button>
         </div>
       </div>
 
