상세페이지 하단 갤러리 기능 정보 가져오기
가져왔습니다.

--- a/detail.html
+++ b/detail.html
@@ -123,6 +123,21 @@
 
       <!-- comment print -->
       <div class="comment-print"></div>
+      <!-- gallery -->
+    </section>
+    <section class="gallery">
+      <div class="gallery-title">갤러리</div>
+      <div class="container">
+        <div class="images">
+          <div class="imageFlex1"></div>
+        </div>
+        <div class="images">
+          <div class="imageFlex2"></div>
+        </div>
+        <div class="images">
+          <div class="imageFlex3"></div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
