메인페이지 검색,정렬 수정 (#46)
영화 제목에 공백이 있을 때 공백없이 검색하면 검색이 안되는 문제 해결
main.js 64번째 줄에 split(" ").join(""). 추가

평점 순 정렬 추가
main.js 99번째 줄에 평점 순 정렬 추가

투표 순에서 평점 순으로 바꾸기
index.html 44번째 줄 평점 순으로 수정

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="filter-name">흥행영화 전체보기</div>
           <div class="filter-select">
             <div class="popularity">인기도 순</div>
-            <div class="vote">투표수 순</div>
+            <div class="vote">평점 순</div>
           </div>
         </div>
         <div class="search-box">
