--- a/index.html
+++ b/index.html
@@ -1,62 +1,60 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title></title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
-    <link rel="stylesheet" href="./css/index.css" />
 
-    <script defer type="module" src="./js/main.js"></script>
-    <!-- <script defer src="./js/detail.js"></script> -->
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <title></title>
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/xbb5tyl.css" />
+  <link rel="stylesheet" href="./css/index.css" />
 
-  <body>
-    <!-- HEADER -->
-    <header>
-      <div class="header">
-        <div class="logo-box">
-          <img src="" alt="로고 이미지" />
+  <script defer type="module" src="./js/main.js"></script>
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header>
+    <div class="header">
+      <div class="logo-box">
+        <img src="" alt="로고 이미지" />
+      </div>
+    </div>
+  </header>
+
+  <!-- Slide visual -->
+  <main>
+    <div class="top-text">Top3 영화를 만나보세요.</div>
+    <div class="button-list">
+      <button class="button-left">Left</button>
+      <button class="button-right">Right</button>
+    </div>
+    <div id="slider">
+      <div class="slide-inner">
+        <!-- clss slide 가 하나의 조입니다.-->
+
+      </div>
+    </div>
+  </main>
+
+  <section class="inner">
+    <div class="filter-form">
+      <div class="filter">
+        <div class="filter-name">흥행영화 전체보기</div>
+        <div class="filter-select">
+          <div class="popularity">인기도 순</div>
+          <div class="vote">평점 순</div>
         </div>
       </div>
-    </header>
+      <div class="search-box">
+        <input type="text" class="search-input" placeholder="검색어를 입력해주세요." />
+        <button class="search-btn">검색</button>
+      </div>
+    </div>
 
-    <!-- Slide visual -->
-    <main>
-      <div class="top-text">Top3 영화를 만나보세요.</div>
-      <div class="button-list">
-        <button class="button-left">Left</button>
-        <button class="button-right">Right</button>
-      </div>
-      <div id="slider">
-        <div class="slide-inner">
-          <!-- clss slide 가 하나의 조입니다.-->
-        </div>
-      </div>
-    </main>
+    <div class="card-container">
+      <!-- 클래스 movie-card가 하나의 조 입니다. -->
+    </div>
+  </section>
+</body>
 
-    <section class="inner">
-      <div class="filter-form">
-        <div class="filter">
-          <div class="filter-name">흥행영화 전체보기</div>
-          <div class="filter-select">
-            <div class="popularity">인기도 순</div>
-            <div class="vote">평점 순</div>
-          </div>
-        </div>
-        <div class="search-box">
-          <input
-            type="text"
-            class="search-input"
-            placeholder="검색어를 입력해주세요."
-          />
-          <button class="search-btn">검색</button>
-        </div>
-      </div>
-
-      <div class="card-container">
-        <!-- 클래스 movie-card가 하나의 조 입니다. -->
-      </div>
-    </section>
-  </body>
 </html>
