좋아요 버튼 수정..
좋아요 버튼 수정 제발..₩

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <header>
       <div class="header">
         <div class="logo-box">
-          <img src="" alt="로고 이미지" />
+          <div class="text">🎥TOP20</div>
         </div>
       </div>
     </header>
 
     <!-- Slide visual -->
     <main>
-      <div class="top-text">Top3 영화를 만나보세요.</div>
+      <div class="top-text">영화를 만나보세요.</div>
       <div class="button-list">
-        <button class="button-left">Left</button>
-        <button class="button-right">Right</button>
+        <button class="button-left"><</button>
+        <button class="button-right">></button>
       </div>
       <div id="slider">
         <div class="slide-inner">
