Simplify code style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div id="slider">
         <div class="slide-inner">
-          <!-- clss slide 가 하나의 조입니다.-->
+          <!-- class slide 가 하나의 조입니다.-->
         </div>
       </div>
     </main>
