--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
     <header>
       <div class="header">
         <div class="logo-box">
-          <img src="" alt="로고 이미지" />
+          <div class="text"><a href="index.html">🎥TOP20</a></div>
         </div>
       </div>
     </header>
