--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
     <header>
       <div class="header">
         <div class="logo-box">
-          <div class="text"><a href="index.html">🎥TOP20</a></div>
+          <div class="text"><a href="index.html">🏠TOP20</a></div>
         </div>
       </div>
     </header>
@@ -59,7 +59,7 @@
     <!-- movie detail production and box office success -->
     <section class="money-info">
       <div class="title">
-        <p>제작 및 흥행</p>
+        <p>제작 및 흥행 🎬</p>
       </div>
       <table class="money-table">
         <tr>
@@ -87,7 +87,7 @@
     <!-- comment -->
     <section class="comment">
       <div class="title-area">
-        <div class="title">영화 관람평</div>
+        <div class="title">영화 관람평💭</div>
         <div class="filters">
           <p data-gender="모두보기">모두보기</p>
           <p data-gender="남성">남성</p>
